--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@ai-sdk/google": "^1.2.22",
     "@ai-sdk/openai": "^1.3.23",
     "@headlessui/react": "^2.2.3",
-    "openai": "^4.79.0",
     "@hookform/resolvers": "^5.1.1",
     "@openrouter/ai-sdk-provider": "^0.7.3",
     "@prisma/client": "^6.8.2",
@@ -37,11 +36,13 @@
     "@trpc/tanstack-react-query": "^11.1.2",
     "ai": "^4.3.19",
     "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
     "google-auth-library": "^10.2.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
     "markdown-to-jsx": "^7.7.13",
     "minio": "^8.0.5",
+    "openai": "^4.79.0",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -49,6 +50,7 @@
     "redaxios": "^0.5.1",
     "shlex": "^3.0.0",
     "superjson": "^2.2.2",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.19.4",
     "vinxi": "0.5.3",
