projects/learnings functionality cleanup

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "react-hot-toast": "^2.5.2",
     "redaxios": "^0.5.1",
     "shlex": "^3.0.0",
     "superjson": "^2.2.2",
