--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@headlessui/react": "^2.2.3",
     "@hookform/resolvers": "^5.1.1",
     "@openrouter/ai-sdk-provider": "^0.7.3",
+    "@playwright/mcp": "^0.0.33",
     "@prisma/client": "^6.8.2",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/forms": "^0.5.10",
@@ -43,6 +44,7 @@
     "markdown-to-jsx": "^7.7.13",
     "minio": "^8.0.5",
     "openai": "^4.79.0",
+    "playwright": "^1.54.2",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
